--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,36 @@
-aiohttp==3.8.4
-aiosignal==1.3.1
-async-timeout==4.0.2
-attrs==22.2.0
-boto3==1.26.95
-botocore==1.29.95
-certifi==2022.12.7
-charset-normalizer==3.1.0
-click==8.1.3
-Flask==2.2.3
-frozenlist==1.3.3
-idna==3.4
-importlib-metadata==6.1.0
+annotated-types==0.6.0
+anyio==4.2.0
+async-timeout==4.0.3
+blinker==1.7.0
+boto3==1.34.6
+botocore==1.34.6
+certifi==2023.11.17
+charset-normalizer==3.3.2
+click==8.1.7
+distro==1.8.0
+exceptiongroup==1.2.0
+flask==3.0.0
+h11==0.14.0
+httpcore==1.0.2
+httpx==0.26.0
+idna==3.6
+importlib-metadata==7.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 jmespath==1.0.1
-MarkupSafe==2.1.2
-multidict==6.0.4
-openai==0.27.2
+MarkupSafe==2.1.3
+openai==1.6.1
+pydantic==2.5.3
+pydantic-core==2.14.6
 python-dateutil==2.8.2
 python-dotenv==1.0.0
-redis==4.5.2
-requests==2.28.2
-s3transfer==0.6.0
+redis==5.0.1
+requests==2.31.0
+s3transfer==0.10.0
 six==1.16.0
-tqdm==4.65.0
-urllib3==1.26.15
-Werkzeug==2.2.3
-yarl==1.8.2
-zipp==3.15.0
+sniffio==1.3.0
+tqdm==4.66.1
+typing-extensions==4.9.0
+urllib3==1.26.18
+werkzeug==3.0.1
+zipp==3.17.0
